tests/ui/feature-gates/feature-gate-repr-scalable.stderr
error[E0658]: Scalable SIMD types are experimental and possibly buggy
  --> $DIR/feature-gate-repr-scalable.rs:3:1
   |
LL | #[repr(simd, scalable(16))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(repr_scalable)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
